long lines are now wrapped anf fixed some other bugs

--- a/application/static/css/scribeui.css
+++ b/application/static/css/scribeui.css
@@ -205,11 +205,11 @@ button {
 }
 
 .tab-container {
-    overflow-x: auto;
+    /*overflow-x: auto;*/
 }
 
 .tab-container-small {
-    overflow-x: auto;
+    /*overflow-x: auto;*/
     border-bottom: 1px solid #AAAAAA !important;
 }
 
